--- a/app/views/lectures/lectureforum.scala.html
+++ b/app/views/lectures/lectureforum.scala.html
@@ -3,5 +3,10 @@
 <div class="page-header">
   <h1>@Messages("forum.header")</h1><small>@Messages("forum.note")</small>
 </div>
-
+<div class="row">
+<button class="btn btn-success">@Messages("forum.create")</button>
 <div class="btn-group"></div>
+</div>
+
+  @*here begins with modal for creating forum thread*@
+
