fix the issue in remote repo lecture(forget to update the code basis for remote repo)

--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -328,7 +328,7 @@
 
       </div>
       <div class="tab-pane" id="forum">
-        @views.html.lectures.lectureforum(user,semesteruser,lecture)
+        forum
       </div>
     </div>
   </div>
