--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -256,7 +256,7 @@
         }
       </div>
       <div class="tab-pane" id="forum">
-      @views.html.lectures.lectureforum(user,semesteruser,lecture)
+      forum
       </div>
     </div>
 
