--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -256,7 +256,13 @@
         }
       </div>
       <div class="tab-pane" id="forum">
-      forum
+        <div class="page-header">
+          <h1>@Messages("forum.header")</h1><small>@Messages("forum.note")</small>
+        </div>
+        <div class="row">
+          <button class="btn btn-success">@Messages("forum.create")</button>
+          <div class="btn-group"></div>
+        </div>
       </div>
     </div>
 
