--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -56,6 +56,7 @@
             <script src="@routes.Assets.at("javascripts/form2json/form2js.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/form2json/submitform.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/usermanage/usermanageform.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/forum/forumcontroll.js")" type="text/javascript"></script>
 
         </div>
 
