add stikytabs js libary to enable the perstitence of bootstrap tab state, use normal form sub instead json(overkill)

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -57,6 +57,8 @@
             <script src="@routes.Assets.at("javascripts/form2json/submitform.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/usermanage/usermanageform.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/forum/forumcontroll.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/stickytab/jquery.stickytabs.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/stickytab/tabpersistance.js")" type="text/javascript"></script>
 
         </div>
 
