--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -1,4 +1,4 @@
-@(user:User)(semesteruser: Semesteruser)(lecture: Lecture)(thread:Thread)
+@(user:User)(semesteruser: Semesteruser)(lecture: Lecture)(thread:ForumThread)
 @dashboard.dashboard(user){
   <div class="col-md-8 well well-sm">
     <div class="text-center">@wflash()</div>
