--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -255,14 +255,102 @@
 
         }
       </div>
-      <div class="tab-pane" id="forum">
+      <div ng-app="forumapp" ng-controller="forumcontroller" class="tab-pane" id="forum">
         <div class="page-header">
           <h1>@Messages("forum.header")</h1><small>@Messages("forum.note")</small>
         </div>
-        <div class="row">
-          <button class="btn btn-success">@Messages("forum.create")</button>
-          <div class="btn-group"></div>
+        <div class="row col-md-12">
+          <button ng-click="section(1)" class="btn btn-success">@Messages("forum.create")</button>
+          <div class="btn-group">
+            <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              @Messages("forum.action") <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+              <li><a href="@controllers.lectures.routes.Lectureforum.forumredirect(lecture.semester,lecture.courseName)#forum">@Messages("thread.all")</a></li>
+              <li><a href="@controllers.lectures.routes.Lectureforum.getmythreads(lecture.semester,lecture.courseName)#forum">@Messages("thread.my")</a></li>
+            </ul>
+          </div>
+          <hr>
+          <form  action="@controllers.lectures.routes.Lectureforum.createthread(user.lastname,lecture.semester,lecture.courseName)#forum" method="post" id="createthreadform" name="createthreadform" ng-show="showsection(1)" class="form-horizontal">
+            <input name="title" ng-model="title" required type="text" class="form-control" placeholder="@Messages("thread.title")"><br>
+            <textarea name="content" ng-model="content" required class="form-control" rows="5" placeholder="@Messages("content")"></textarea><br>
+            <input ng-disabled="!(createthreadform.title.$dirty && createthreadform.content.$dirty)" class="btn btn-primary" type="submit">
+          </form>
+          @if(thread==null){
+            <table ng-show="showsection(2)" class="table table-striped custab">
+              <thead>
+                <tr>
+                  <th>@Messages("thread.title")</th>
+                  <th>@Messages("thread.creator")</th>
+                  <th>@Messages("thread.reply")</th>
+                  <th>@Messages("thread.lastchange")</th>
+                </tr>
+              </thead>
+              @if(threadlist==null){
+                @for(thread<-ForumThread.findByLecture(lecture.semester,lecture)){
+                  <tr>
+                    <td><a href="@controllers.lectures.routes.Lectureforum.getthread(lecture.semester,lecture.courseName,thread.id)#forum">@thread.title</a></td>
+                    <td><div class="pull-left">
+                      <img class="media-object" src="http://www.gravatar.com/avatar/@user.userHash" height="20" width="20">
+                    </div> @thread.creator.firstname @thread.creator.lastname</td>
+                    <td>@thread.replyposts.size()</td>
+                    <td>@thread.lastupdate</td>
+                  </tr>}}
+
+              @if(threadlist!=null){
+                @for(thread<-threadlist){
+                  <tr>
+                    <td><a href="@controllers.lectures.routes.Lectureforum.getthread(lecture.semester,lecture.courseName,thread.id)#forum">@thread.title</a></td>
+                    <td><div class="pull-left">
+                      <img class="media-object" src="http://www.gravatar.com/avatar/@user.userHash" height="20" width="20">
+                    </div> @thread.creator.firstname @thread.creator.lastname</td>
+                    <td>@thread.replyposts.size()</td>
+                    <td>@thread.lastupdate</td>
+                  </tr>}
+              }
+            </table>
+          }
+
+          <div ng-show="showsection(2)">
+          @if(thread!=null){
+            <div class="well">
+              <div class="media">
+                <a class="pull-left" href="#">
+                  <img class="media-object" src="http://www.gravatar.com/avatar/@thread.creator.userHash" height="20" width="20">
+                </a>
+                <div class="media-body">
+                  <h4 class="media-heading">@thread.creator.firstname @thread.creator.lastname<span class="label label-info">@Messages("thread.starter")</span></h4>
+                  <p>@thread.content</p>
+                  <ul class="list-inline list-unstyled">
+                    <li><span><i class="glyphicon glyphicon-calendar"></i>@thread.creattime</span></li>
+                  </ul>
+                </div>
+              </div>
+            </div><hr>
+            @for(post<-thread.replyposts){
+              <div class="well">
+                <div class="media">
+                  <a class="pull-left" href="#">
+                    <img class="media-object" src="http://www.gravatar.com/avatar/@post.creator.userHash" height="20" width="20">
+                  </a>
+                  <div class="media-body">
+                    <h4 class="media-heading">@post.creator.firstname @post.creator.lastname</h4>
+                    <p>@post.content</p>
+                    <ul class="list-inline list-unstyled">
+                      <li><span><i class="glyphicon glyphicon-calendar"></i>@post.creattime</span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div><hr>
+            }
+            <form action="@controllers.lectures.routes.Lectureforum.createpost(lecture.semester,lecture.courseName,thread.id)#forum" method="post" class="form-horizontal">
+              <textarea class="form-control" name="postcontent" rows="5"></textarea><br>
+              <input type="submit" class="btn btn-primary pull-right">
+            </form>
+          }
+          </div>
         </div>
+
       </div>
     </div>
 
