--- a/app/views/lectures/admin/lecturehome.scala.html
+++ b/app/views/lectures/admin/lecturehome.scala.html
@@ -24,6 +24,13 @@
           <span class="label label-warning">@Messages("lecture.closingdate")@lecture.closingdate</span>
           <hr>
           @lecture.desription
+          <span class="label label-primary">@Messages("lecture.contact")</span>
+          <ul class="list-inline list-unstyled">
+            @for(admin<-Semesteruser.findworkerByLecture(lecture.semester,lecture)){
+              <li><span><i class="glyphicon glyphicon-user"></i>@admin.firstname @admin.lastname</span></li>
+              <li> </li>
+            }
+          </ul>
         </div>
       </div>
       @if(lecture.localrepo){
