--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -22,7 +22,7 @@
             <ul class="list-inline list-unstyled">
               <li><span class="label label-primary">@Messages("lecture.contact")</span></li>
             @for(admin<-Semesteruser.findworkerByLecture(lecture.semester,lecture)){
-              <li><span><i class="glyphicon glyphicon-user"></i>@admin.firstname @admin.lastname</span></li>
+              <li><span><i class="glyphicon glyphicon-user"></i><a>@admin.firstname @admin.lastname</a></span></li>
               <li> </li>
             }
             </ul>
