--- a/app/views/lectures/user/lecturehome.scala.html
+++ b/app/views/lectures/user/lecturehome.scala.html
@@ -22,7 +22,7 @@
             <ul class="list-inline list-unstyled">
               <li><span class="label label-primary">@Messages("lecture.contact")</span></li>
             @for(admin<-Semesteruser.findworkerByLecture(lecture.semester,lecture)){
-              <li><span><img class="media-object" src="http://www.gravatar.com/avatar/@admin.userHash" height="20" width="20"><a href="#" data-toggle="modal" data-target="#message@admin.userHash">@admin.firstname @admin.lastname</a></span></li>
+              <li><span><i class="fa fa-user"></i><a href="#" data-toggle="modal" data-target="#message@admin.userHash">@admin.firstname @admin.lastname</a></span></li>
               <li> </li>
                 <!-- message Modal -->
               <div class="modal fade" id="message@admin.userHash" tabindex="-1" role="dialog">
