add filter function to message controll,add semester to conversation model

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -60,6 +60,7 @@
             <script src="@routes.Assets.at("javascripts/stickytab/jquery.stickytabs.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/stickytab/tabpersistance.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/forum/forumcontroll.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/message/messagecontrol.js")" type="text/javascript"></script>
         </div>
 
 
