--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -61,6 +61,7 @@
             <script src="@routes.Assets.at("javascripts/stickytab/tabpersistance.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/forum/forumcontroll.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/message/scrollglue.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/message/ng-websocket.js")" type="text/javascript"></script>
             <script src="@routes.Assets.at("javascripts/message/messagecontrol.js")" type="text/javascript"></script>
         </div>
 
